    * Update maintainer.
  * Add binary package ledger-el
    * Add section in debian/control
    * Fix installation path of ledger.el in debian/rules.
    * Move emacsen-startup to ledger-el.emacsen-startup.
    * Add ledger-el.dirs.
  * Remove debian-supplied manpage; added upstream.
  * Remove debian/dirs.
  * Switch to dpkg-source 3.0 (quilt) format
  * Add dependency on quilt.

 -- Michael Budde <mbudde@gmail.com>  Fri, 28 May 2010 11:45:39 +0200

ledger (2.6.2-2) unstable; urgency=low

  * CONSTipate gnucash.cc, textual.cc, and option.cc, so it builds with GCC
    4.4.  Thanks to Stefan Ebner for the patch.  Closes: #547303.
  * Install a man page (this will become redundant once 3.0 comes out, but
    until then...).  Thanks to Carl Worth for the manpage.  Closes: #540409.
  * Install emacs mode for ledger (ledger.el); untested, as I have no emacs
    fu, but here's hoping... Thanks to Kevin Ryde for the patch.
    Closes: #554040.
  * Bumped standards version; no changes required.

 -- Matt Palmer <mpalmer@debian.org>  Sat, 26 Dec 2009 10:38:50 +1100

ledger (2.6.2-1) unstable; urgency=low

  * New upstream release.

 -- Matt Palmer <mpalmer@debian.org>  Tue, 30 Jun 2009 18:47:07 +1000

ledger (2.6.1-3) unstable; urgency=low

  * Put sample.dat and the scripts directory in examples.  Closes: #524976.
  * Build and install the HTML docs as well.  Just Because.

 -- Matt Palmer <mpalmer@debian.org>  Tue, 28 Apr 2009 19:52:52 +1000

ledger (2.6.1-2) unstable; urgency=low

  * Update README to point to new mailing list.  Closes: #513414
  * Build and install the PDF documentation.  Closes: #513416

 -- Matt Palmer <mpalmer@debian.org>  Sat, 31 Jan 2009 15:04:13 +1100

ledger (2.6.1-1) unstable; urgency=low

  * New upstream release.

 -- Matt Palmer <mpalmer@debian.org>  Thu, 18 Sep 2008 10:11:27 +1000

ledger (2.6.0.90-1) unstable; urgency=low

  * Initial release (Closes: #405011)

 -- Matt Palmer <mpalmer@debian.org>  Tue, 10 Jun 2008 18:44:40 +1000
