@@ -17,6 +17,8 @@ ledger (3.0.0~20100615-0mbudde1) lucid; urgency=low
   * Remove debian/dirs.
   * Switch to dpkg-source 3.0 (quilt) format
   * Add dependency on quilt.
+  * Use an install file instead of copying ledger.el by hand in
+    debian/rules.
 
  -- Michael Budde <mbudde@gmail.com>  Fri, 28 May 2010 11:45:39 +0200
 
